--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-howler": "^5.2.0",
+    "react-icons": "^5.2.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -25,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-howler": "^5.2.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
